--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,7 +11,7 @@ body {
   padding: 20px 10px;
 }
 
-.header a {
+.header p{
   float: left;
   color: black;
   text-align: center;
@@ -22,17 +22,28 @@ body {
   border-radius: 4px;
 }
 
+.header a{
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+  }
+
 .header a.logo {
   font-size: 25px;
   font-weight: bold;
 }
 
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
+.header p:hover {
+    background-color: #ddd;
+    color: black;
+  }
 
-.header a.active {
+.header p.active {
   background-color: dodgerblue;
   color: white;
 }
@@ -42,7 +53,7 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-  .header a {
+  .header a p{
     float: none;
     display: block;
     text-align: left;
